# pure-recipe

./: .gitignore  LICENSE.txt  README.md  config.yaml  crispy-baked-potato-wedges.md  pure-recipe.py  pure_recipe.py  pyproject.toml  recipe-to-markdown.py  recipe_list_test.txt  requirements.txt  scraper_calls.txt  test.py  the-food-lab's-chocolate-chip-cookies-recipe.md
src/: pure_recipe.py
tests/: __init__.py  test_format.py  test_main.py
tests/resurces/: recipies.txt
